syntax = "proto3";

package crimesProcessing.Contracts;


service CrimesService {
  rpc SayHello (CrimesRequest) returns (CrimesResponse);
  rpc GetProbability (CalculatePredictionRequest) returns (CalculatePredictionResponse)
  rpc CalculateCrimes (CalculateAvgRequest) returns (stream CalculateAvgResponse)
}

message CalculateAvgRequest{
int year = 1
}

message CalculateAvgResponse{
int year = 1,
int district = 2,
int crimesCount = 3,
string crimeType = 4
}

message CalculatePredictionRequest {
  string date = 1;
  string xcoordinates = 2,
  string ycoordinates = 3
}

message CalculatePredictionResponse {
  double probability;
}


message CrimesRequest {
  string message = 1;
}

message CrimesResponse {
  string result = 1;
}
